# oztarim.github.io

./: CNAME  README-OzgurTarim.md  index.html  pyproject.toml  resume.css
back_frontend/src/: App.css
flask-server/: .flaskenv  app.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
