[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["oztarim <78991811+oztarim@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "social_app"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
